# Discord-Music-Bot

./: .gitignore  .replit  README.md  env.py  flask_app.py  main.py  playground.py  pyproject.toml
bot/: Music.py  Player.py  Queue.py  TTS.py  main.py
database/: main.py
ytdl/: TTS.py  YTDLSource.py  config.py  options.py
