[tool.poetry]
name = "repl_python3_Discord-Music"
version = "0.1.0"
description = ""
authors = ["gabrielDonnantu <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
google-api-python-client = "^2.21.0"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
python-dotenv = "^0.19.0"
yt-dlp = "^2021.9.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
